# wasm-frp

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
backend/static/: index.html
frontend/: Cargo.toml  Dockerfile  Makefile
frontend/src/: lib.rs
