[package]
name = "your_project_backend"
version = "0.1.0"
edition = "2018"

[dependencies]
hyper = "0.14"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# If you use shared types or utilities
your_project_shared = { path = "../shared" }
