[package]
name = "wasm_frp_backend"
version = "0.1.0"
edition = "2018"

[dependencies]
hyper = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
pretty_env_logger = "0.4"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
surrealdb = { version = "2.0.4", features = ["protocol-http", "protocol-ws"] }


# If you use shared types or utilities
#your_project_shared = { path = "../shared" }
