[package]
name = "your_project_frontend"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
yew = "0.18"

# Optional: for using web_sys features directly
web-sys = { version = "0.3", features = ['console'] }

# Shared library
your_project_shared = { path = "../shared" }

[features]
default = ["console_error_panic_hook"]
